tests/suite/fail/regression/fuzz/fuzz_empty_parens.ny
fn main() { let x = () } //~ ERROR
